// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuTristate matches snapshot false 1`] = `
<li
  class="bp4-submenu"
>
  <span
    class="bp4-popover-wrapper"
  >
    <span
      aria-haspopup="true"
      class="bp4-popover-target"
    >
      <a
        class="bp4-menu-item menu-tristate"
        label="false"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          hello
        </div>
        <span
          class="bp4-menu-item-label"
        >
          false
        </span>
        <span
          class="bp4-icon bp4-icon-caret-right bp4-submenu-icon"
          icon="caret-right"
        >
          <svg
            data-icon="caret-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              Open sub menu
            </desc>
            <path
              d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </a>
    </span>
  </span>
</li>
`;

exports[`MenuTristate matches snapshot undefined 1`] = `
<li
  class="bp4-submenu"
>
  <span
    class="bp4-popover-wrapper"
  >
    <span
      aria-haspopup="true"
      class="bp4-popover-target"
    >
      <a
        class="bp4-menu-item menu-tristate"
        label="auto (true)"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          hello
        </div>
        <span
          class="bp4-menu-item-label"
        >
          auto (true)
        </span>
        <span
          class="bp4-icon bp4-icon-caret-right bp4-submenu-icon"
          icon="caret-right"
        >
          <svg
            data-icon="caret-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              Open sub menu
            </desc>
            <path
              d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </a>
    </span>
  </span>
</li>
`;
